<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="night_settings">Тёмная тема</string>
    <string name="share_settings">Поделиться приложением</string>
    <string name="support_settings">Написать в поддержку</string>
    <string name="contract_settings">Пользовательское cоглашение</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer</string>
    <string name="my_email">kolesnikov.yk@ya.ru</string>
    <string name="message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="offerta_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clean_text_button_description">Удалить текст</string>


</resources>