<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/main_head_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height_layout"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:paddingHorizontal="@dimen/def_padding"
            android:textSize="@dimen/main_head_text_size"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        style="@style/MainButtonRelativeLayout"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/main_button_search"
            style="@style/MainScreenButton" />

        <LinearLayout
            style="@style/ButtonContentLinearLayout">

            <ImageView
                style="@style/ButtonIcon"


                android:src="@drawable/main_ic_search" />

            <TextView
                style="@style/ButtonText"
                android:text="@string/search"/>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        style="@style/MainButtonRelativeLayout"
        android:layout_marginVertical="@dimen/main_between_buttons">

        <Button
            android:id="@+id/main_button_media"
            style="@style/MainScreenButton" />

        <LinearLayout
            style="@style/ButtonContentLinearLayout">

            <ImageView
                style="@style/ButtonIcon"
                android:src="@drawable/main_ic_media"/>

            <TextView
                style="@style/ButtonText"
                android:text="@string/mediateka"/>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        style="@style/MainButtonRelativeLayout"
        android:layout_marginTop="@dimen/main_between_buttons"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/main_button_settings"
            style="@style/MainScreenButton"
            />

        <LinearLayout
            android:baselineAligned="false"
            style="@style/ButtonContentLinearLayout">

            <ImageView

                style="@style/ButtonIcon"
                android:src="@drawable/main_ic_settings"/>

            <TextView
                style="@style/ButtonText"
                android:text="@string/settings"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>